--- a/write_smokeview_file/makefile_2008
+++ b/write_smokeview_file/makefile_2008
@@ -15,8 +15,8 @@ VPATH = /Source2008
 
 #*** Serial or MPI object variables ***
 obj_serial = isob.o prec.o smvv.o cons.o devc.o type.o mesh.o func.o irad.o \
-             ieva.o radi.o evac.o part.o vege.o ctrl.o dump.o read.o \
-             wall.o fire.o divg.o init.o velo.o main.o
+             ieva.o radi.o evac.o part.o ctrl.o dump.o read.o \
+             wall.o divg.o init.o main.o
 
 #*** General Purpose Rules ***
 no_target:
@@ -200,18 +200,15 @@ func.o : func.f90 prec.f90 cons.f90 type.f90 mesh.f90
 ctrl.o : ctrl.f90 prec.f90 cons.f90 type.f90 mesh.f90 func.f90
 irad.o : irad.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90
 ieva.o : ieva.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90
-fire.o : fire.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90
 wall.o : wall.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90
-velo.o : velo.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90
 divg.o : divg.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90
 radi.o : radi.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90 irad.f90
 evac.o : evac.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90 ieva.f90
 part.o : part.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90 devc.f90
-vege.o : vege.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90 devc.f90
 read.o : read.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90 devc.f90 irad.f90
 init.o : init.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90 devc.f90 irad.f90
 dump.o : dump.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90 devc.f90 smvv.f90 isob.c
-main.o : main.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90 devc.f90 smvv.f90 isob.c divg.f90 velo.f90 wall.f90 fire.f90 irad.f90 ieva.f90 radi.f90 evac.f90 part.f90 vege.f90 dump.f90 read.f90 init.f90 ctrl.f90
+main.o : main.f90 func.f90 prec.f90 cons.f90 type.f90 mesh.f90 devc.f90 smvv.f90 isob.c divg.f90 wall.f90 irad.f90 ieva.f90 radi.f90 evac.f90 part.f90 dump.f90 read.f90 init.f90 ctrl.f90
 
 #*** Clean Target to remove Object and Module files ***
 
